--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h1 {
   background: white;
   border-radius: 12px;
   border: 2px solid #ddd;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
+  box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.55);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -69,14 +69,14 @@ h1 {
 
 @keyframes fallspin {
   0% {
-    transform: translateY(-300px) rotateZ(0deg);
+    transform: translateY(-300px) rotateZ(-140deg);
     opacity: 0;
   }
   10% {
     opacity: 1;
   }
   100% {
-    transform: translateY(0) rotateZ(360deg);
+    transform: translateY(0) rotateZ(0deg);
     opacity: 1;
   }
 }
